--- a/config.yaml
+++ b/config.yaml
@@ -1,23 +1,23 @@
 general:
-  batch_size: 4
+  batch_size: 1
   device: cpu
   mode: train
   epoch: 2
   # cross = dual
   model_type: "cross"
-  valid_size: 0.1
+  valid_size: 0.05
   test_size: 0.1
   max_length: 384
   n_worker: 0
   save_ckpt_per_n_epoch: 1 
   # envibert
-  plm: xlmr
+  plm: envibert
   accumulation_steps: 2
 
 path: 
   pretrained_dir: pretrained
-  train_data: data/testset.json
-  test_data: data/testset.json
+  train_data: data/ir/test
+  test_data: data/ir/test
   warm_up: checkpoints/cross_1.bin
   ckpt: outputs/checkpoints
   log: outputs/logs
