--- a/config.yaml
+++ b/config.yaml
@@ -10,6 +10,7 @@ general:
   max_length: 384
   n_worker: 2
   save_ckpt_per_n_epoch: 1 
+  logging_per_steps: 100
   evaluate_per_step: 10000
   # envibert
   plm: xlmr
