--- a/config.yaml
+++ b/config.yaml
@@ -10,10 +10,10 @@ general:
   max_length: 384
   n_worker: 2
   save_ckpt_per_n_epoch: 1 
-  logging_per_steps: 100
+  logging_per_steps: 1
   evaluate_per_step: 10000
   # envibert
-  plm: xlmr
+  plm: envibert
   accumulation_steps: 8
 
 path: 
